<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">神马视频</string>
    <string name="recommend">热门推荐</string>
    <string name="tv_Internet">网络电视</string>
    <string name="video_type">影视专区</string>
    <string name="app_store">应用中心</string>
    <string name="user">用户</string>
    <string name="settings">我的设置</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_exit_exception">亲，程序好像挂掉了</string>
    <string name="time_colon">:</string>
    <string name="tvplay">电视剧</string>
    <string name="movie">电影</string>
    <string name="tv_show">综艺</string>
    <string name="comic">动漫</string>
    <string name="teach">教育</string>
    <string name="documentary">记录</string>
    <string name="music">音乐</string>
    <string name="diy">原创</string>
    <string name="tvback_str_data_loading_error">亲，网络已断开连接了</string>
    <string name="wifi_connect">Wifi网络已经连接上了</string>
    <string name="eth_connect">有线网络已经连接上了</string>
    <string name="version_updata">开始检测最新版本</string>
    <string name="version_updata_downlond">正在后台下载,请稍后</string>
    <string name="updata_bg">壁纸更换成功</string>
    <string name="app_downlond">正在后台下载，完成后提示安装...</string>
    <string name="app_downlond_no_ok">文件还没下载完成，请耐心等待</string>
    <string name="str_data_loading"></string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_none" msgid="7985461072596594400">"无"</string>
    <string name="wifi_not_in_range" msgid="1136191511238508967">"不在范围内"</string>
    <string name="wifi_disabled_password_failure" msgid="8659805351763133575">"身份验证出现问题"</string>
    <string name="wifi_disabled_network_failure" msgid="3111321240793227690">"已停用状况不佳的互联网连接"</string>
    <string name="wifi_disabled_generic" msgid="4259794910584943386">"已停用"</string>
    <string name="wifi_remembered" msgid="4955746899347821096">"已保存"</string>
    <string name="wifi_secured_first_item" msgid="4072076186051083451">"通过<xliff:g id="WIFI_SECURITY_SHORT">%1$s</xliff:g>进行保护"</string>
    <string name="wifi_secured_second_item" msgid="1326000076939056265">"，通过<xliff:g id="WIFI_SECURITY_SHORT">%1$s</xliff:g>进行保护"</string>
    <string-array name="wifi_status">
        <item msgid="1922181315419294640"></item>
        <item msgid="8934131797783724664">"正在扫描..."</item>
        <item msgid="8513729475867537913">"正在连接..."</item>
        <item msgid="515055375277271756">"正在进行身份验证..."</item>
        <item msgid="1943354004029184381">"正在获取 IP 地址..."</item>
        <item msgid="4221763391123233270">"已连接"</item>
        <item msgid="624838831631122137">"已暂停"</item>
        <item msgid="7979680559596111948">"正在断开连接..."</item>
        <item msgid="1634960474403853625">"已断开连接"</item>
        <item msgid="746097431216080650">"失败"</item>
    </string-array>
    <string-array name="wifi_status_with_ssid">
        <item msgid="7714855332363650812"></item>
        <item msgid="8878186979715711006">"正在扫描..."</item>
        <item msgid="355508996603873860">"正在连接到 <xliff:g id="NETWORK_NAME">%1$s</xliff:g>..."</item>
        <item msgid="554971459996405634">"正在通过 <xliff:g id="NETWORK_NAME">%1$s</xliff:g> 进行身份验证..."</item>
        <item msgid="7928343808033020343">"正在从 <xliff:g id="NETWORK_NAME">%1$s</xliff:g> 获取 IP 地址..."</item>
        <item msgid="8937994881315223448">"已连接到 <xliff:g id="NETWORK_NAME">%1$s</xliff:g>"</item>
        <item msgid="1330262655415760617">"已暂停"</item>
        <item msgid="7698638434317271902">"正在断开与 <xliff:g id="NETWORK_NAME">%1$s</xliff:g> 的连接..."</item>
        <item msgid="197508606402264311">"已断开连接"</item>
        <item msgid="8578370891960825148">"失败"</item>
    </string-array>
    <string-array name="wifi_security">
        <item>Open</item>
        <item>WEP</item>
        <item>WPA/WPA2 PSK</item>
        <item>802.1x EAP</item>
    </string-array>
    <string-array name="wifi_type">
        <item>动态</item>
        <item>静态</item>
    </string-array>
    <string name="display_setting_zoom_bottom_String">按\"返回\"鍵应用设置并返回</string>
    <string name="display_setting_zoom_oncutoff_String">选择方向键点击\"OK\"后使用上下左右键调整缩放比例</string>
    <string name="weather_date_today">今天</string>
    <string name="weather_date_tomorrow">明天</string>
    <string name="weather_date_after_tomorrow">后天</string>
    <string-array name="sleep_setting_screensaver">
        <item>关</item>
        <item>1分钟</item>
        <item>4分钟</item>
        <item>8分钟</item>
        <item>12分钟</item>
    </string-array>
    <string-array name="sleep_setting_sleep">
        <item>关</item>
        <item>2分钟</item>
        <item>15分钟</item>
        <item>30分钟</item>
        <item>60分钟</item>
    </string-array>
    <string-array name="display_setting_resolution_title">
        <item>720P</item>
        <item>1080P</item>
        <item>1080I</item>
    </string-array>
    <string-array name="display_setting_resolution_P_N">
        <item>PAL</item>
        <item>NTSC</item>
    </string-array>
    <string-array name="display_setting_resolution_frequency">
        <item>50HZ</item>
        <item>60HZ</item>
    </string-array>
    <string-array name="display_setting_resolution_resolution">
        <item>1280×720</item>
        <item>1920×1080</item>
    </string-array>
    <string-array name="about_setting_boxname">
        <item>客    厅</item>
        <item>厨    房</item>
        <item>卧    室</item>
    </string-array>
    <string-array name="about_setting_item_title">
        <item>盒子名称</item>
        <item>无线MAC地址</item>
        <item>有线MAC地址</item>
        <item>IP地址</item>
        <item>型号</item>
    </string-array>
    <string-array name="network_setting_open_down">
        <item>关</item>
        <item>开</item>
    </string-array>
    <string name="about_info_recover">恢复出厂值</string>
    <string name="display_setting_resolution">分辨率</string>
    <string name="display_setting_zoom">屏幕缩放</string>
    <string name="network_test_speed_test">网络测试</string>
    <string name="sleep_setting_screensaver_time">屏保时间</string>
    <string name="sleep_setting_sleep_time">休眠时间</string>
    <string name="upgrade_setting_nowversion">当前版本</string>
    <string name="upgrade_setting_newversion">最新版本</string>
    <string name="weather_setting_area_province">省、直辖市</string>
    <string name="weather_setting_area_city">市、县</string>
    <string name="upgrade_setting_info">已是最新版本，不用升级!</string>
    <string name="display_mode_time_out_title">确认修改</string>
    <string name="display_mode_time_out_desc"> 在 " <xliff:g id="SECONDS">%1$d</xliff:g> "秒之后，将会恢复原有设置，是否确定保存当前设置</string>
    <string name="popup_confirmation_dialog_Positive">确认</string>
    <string name="popup_confirmation_dialog_Negative">取消</string>
    <string name="recover_factory_settings_title">恢复提醒：</string>
    <string name="recover_factory_settings_message">是否确认恢复出厂设置？</string>
    <string name="about_setting_info_without">无</string>
    <string name="network_setting_wireless_network_pager_list_item_link_state_linking">正在连接\.\.\.</string>
    <string name="network_setting_wireless_network_pager_list_item_link_state_wrong">输入密码错误</string>
    <string name="network_setting_wireless_network_pager_list_item_link_state_succeed">连接成功</string>
    <string name="wifiap_pwd_notice">请输入正确的密码6位以上数字或字母</string>
    <string name="please_input_ssid">请输入热点名称</string>
    <string name="wifiap_state_turn_on">打开热点</string>
    <string name="wifiap_state_turn_off">热点关闭</string>
    <string name="wifiap_state_turn_on_succeed">打开热点成功</string>
    <string name="wifiap_state_turn_on_fail">打开热点失败</string>
    <string name="ip_error_info">输入网络信息不合法</string>
    <string name="ip_set_succes">IP设置成功</string>
    <string name="display_setting_ntsc">NTSC</string>
    <string name="display_setting_pal">PAL</string>
    <string name="networkspeed_title">当前网速：</string>
    <string name="networkspeed_unit">kbps</string>
    <string name="none_name">请输入名称</string>
    <string name="none_password">请输入密码</string>
    <string name="illegal_password">密码不合标准，要求8位以上数字或英文</string>
    <string name="set_failed">设置失败</string>
    <string name="network_linked_failed">网络连接失败</string>
    <string name="network_linked_succeed">网络连接成功</string>
    <string name="network_configuration_failed">网络配置失败</string>
    <string name="network_configuration_succeed">网络配置成功</string>
    <string name="network_disconnect">网络断开</string>
    <string name="remote_installation_help_info">在PC浏览器中访问</string>
    <string name="splash_version">版本号:</string>
    <string name="exitdialog_qin">亲！</string>
    <string name="exitdialog_out">退出</string>
    <string name="exitdialog_back">再看会儿</string>
    <string name="progress_msg">片刻之后，精彩呈现……</string>
    <string name="load_msg">精彩节目，马上就有</string>
    <string name="loading_live">检测网络或按\"左右键\"切换源</string>
    <string name="loading_tv">按\"菜单或ok键\"选择节目单</string>
    <string name="load_err">加载数据失败</string>
    <string name="play_next">不能播放，自动切换到下一个源</string>
    <string name="onbackpressed">再按一次返回退出播放</string>
    <string name="str_user_description">选中按\"菜单\"键或长按\"OK\"键</string>
    <string name="str_data_loading_error">网络故障，获取数据失败，请重试。</string>
    <string name="str_data_play_error">本集无法播放，为您播放下一集</string>
    <string name="str_data_start_loading">按"菜单"键可进行筛选哟</string>
    <string name="str_no_data_error">亲！没有找到视频源呢</string>
    <string name="str_collection_loading">继续上次播放</string>
    <string name="details_recommend">推荐观看</string>
    <string name="type_details_sum">共 部</string>
    <string name="prepare_search">输入片名拼音的首字母，如《太极》输入TJ</string>
    <string name="search_allline">搜 索</string>
    <string name="vod_kankan">迅雷</string>
    <string name="vod_pptv">pptv</string>
    <string name="vod_pps_tv">pps_tv</string>
    <string name="vod_letv">乐视</string>
    <string name="vod_youku">优酷</string>
    <string name="vod_sohu">搜狐</string>
    <string name="vod_iqiyi">爱奇艺</string>
    <string name="vod_qq">qq</string>
    <string name="vod_hunan">湖南</string>
    <string name="vod_funshion">风行</string>
    <string name="vod_cntv">cntv</string>
    <string name="vod_tudou">土豆</string>
    <string name="vod_baofeng">暴风</string>
    <string name="vod_wasus">wasus</string>
    <string name="vod_other">其他</string>
    <string name="vod_m_pps">m_pps</string>
    <string name="vod_m_sohu">m_sohu</string>
    <string name="vod_m_tv189">m_tv189</string>
    <string name="vod_m_fengxing">m_fengxing</string>
    <string name="vod_m_qq">m_qq</string>
    <string name="vod_m_pptv">m_pptv</string>
    <string name="vod_m_tudou">m_tudou</string>
    <string name="wifi_ssid_name">名称</string>
    <string name="wifi_ssid_pass">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="show_pass">显示密码</string>
        <string name="wifi_secure_type">类型</string>
        <string name="wifi_ap_name">名称</string>
        <string name="input_wifi_ap_name">ShenmaTvAP</string>
        <string name="default_wifi_ap_pass">shenma123</string>
      <string name="def_time">08 00</string>
      <string name="def_date">1月1日\n星期一</string>
       <string name="user_form_name">账号</string>
       <string name="input_username">字母加数字的形式</string>
       <string name="input_password">密码不能是汉字</string>
</resources>