<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/sm_320"
    android:layout_height="@dimen/sm_210"
    android:gravity="center_vertical"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="@dimen/sm_320"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_ssid_name"
            android:textSize="@dimen/sm_23" />

        <TextView
            android:id="@+id/wifi_unconn_ssid_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sm_20"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textSize="@dimen/sm_23" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sm_20"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sm_31"
            android:gravity="center_vertical"
            android:text="@string/wifi_ssid_pass"
            android:textSize="@dimen/sm_23" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sm_20" >

            <EditText
                android:id="@+id/wifi_unconn_pass_et"
                android:layout_width="@dimen/sm_294"
                android:layout_height="@dimen/sm_31"
                android:background="@drawable/edit_bg"
                android:hint="@string/please_input_password"
                android:singleLine="true"
                android:textSize="@dimen/sm_23" />

            <CheckBox
                android:id="@+id/wifi_unconn_showpass_cb"
                style="@style/MyCheckBox"
                android:layout_width="@dimen/sm_180"
                android:layout_height="@dimen/sm_150"
                android:layout_below="@id/wifi_unconn_pass_et"
                android:layout_marginTop="@dimen/sm_16"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wifi_unconn_pass_et"
                android:layout_marginLeft="@dimen/sm_10"
                android:layout_marginTop="@dimen/sm_10"
                android:layout_toRightOf="@id/wifi_unconn_showpass_cb"
                android:text="@string/show_pass"
                android:textSize="@dimen/sm_20" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>